[project]
name = "lingbot-depth-trt-python"
version = "0.1.0"
description = "Python tools for LingBot-Depth TensorRT conversion and RealSense live demo."
requires-python = ">=3.10,<3.13"
dependencies = [
    "click",
    "huggingface-hub",
    "matplotlib",
    "mdm @ git+https://github.com/Robbyant/lingbot-depth.git",
    "numpy",
    "onnx",
    "onnxruntime-gpu",
    "onnxscript",
    "opencv-python",
    "pillow",
    "polygraphy",
    "pyrealsense2",
    "scipy",
    "tensorrt",
    "torch",
    "torchvision",
    "trimesh",
    "viser",
    "xformers==0.0.29.post2",
]

[tool.uv]
package = false
# mdm hard-pins torch==2.6.0 / torchvision==0.21.0, but those CUDA builds
# predate Blackwell (sm_120) support. Override to newer versions pulled
# from the PyTorch cu128 index so RTX 50-series GPUs work.
override-dependencies = ["torch==2.11.0", "torchvision==0.26.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
